# k8s-crash-reporter

./: Cargo.toml  Dockerfile  README.md
assets/: architecture.drawio
deployment/: k8s-crash-reporter.yaml  secrets.yaml
src/: main.rs
src/crash_reporter/: command_line_crash_reporter.rs  crash_message.rs  crash_reporter.rs  error_logger_crash_reporter.rs  mod.rs  telegram_crash_reporter.rs
src/helper/: logger.rs  mod.rs  prints.rs
src/watcher/: kubernetes_pod_watcher.rs  mod.rs  pod_watcher.rs
