[package]
name = "k8s-crash-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.95.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
futures = "0.3.30"
log = "0.4"
env_logger = "0.11.5"
teloxide = { version = "0.13", features = ["macros"] }
async-trait = "0.1"